<resources>
    <string name="app_name">PruebaTecnicaInterfell</string>
    <string name="title_home">Agregar</string>
    <string name="title_dashboard">Buscar</string>
    <string name="title_notifications">Notificaciones</string>

    <string name="main_subtitle">Ingresa los datos del vehiculo</string>
    <string name="main_plate">Placa</string>
    <string name="main_date">Fecha</string>
    <string name="main_hour">Hora</string>
    <string name="main_search">Buscar</string>

    <string name="fragment_list_title">Consulte contraversiones por fecha y hora</string>

    <string name="fragment_add_plate_required">El numero de placa es requerido</string>
    <string name="fragment_add_date_required">El día es requerido</string>
    <string name="fragment_add_hour_required">La hora es requerida</string>

    <string name="fragment_add_insert_data">Se ha insertado la contravención, placa: </string>
    <string name="fragment_add_no_insert_data">No se inserto la contravención, placa: </string>

    <string name="fragment_add_alert_circular">Puede circular</string>
    <string name="fragment_add_alert_no_digit">Su placa necesita no es valida, necesita terminar con un número</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
