<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.AddContravencionFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:text="@string/main_subtitle"
        android:textStyle="bold"
        android:textSize="@dimen/textBig"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPlate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/main_plate"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="date"
        android:focusableInTouchMode="false"
        android:hint="@string/main_date"
        app:layout_constraintEnd_toEndOf="@+id/editTextPlate"
        app:layout_constraintStart_toStartOf="@+id/editTextPlate"
        app:layout_constraintTop_toBottomOf="@+id/editTextPlate" />

    <EditText
        android:id="@+id/editTextHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="time"
        android:focusableInTouchMode="false"
        android:hint="@string/main_hour"
        app:layout_constraintEnd_toEndOf="@+id/editTextTime"
        app:layout_constraintStart_toStartOf="@+id/editTextTime"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/main_search"
        app:layout_constraintEnd_toEndOf="@+id/editTextHour"
        app:layout_constraintStart_toStartOf="@+id/editTextHour"
        app:layout_constraintTop_toBottomOf="@+id/editTextHour" />

</android.support.constraint.ConstraintLayout>