<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ListContravencionFragment">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/fragment_list_title"
        android:textSize="@dimen/textBasic"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <EditText
            android:id="@+id/editTextTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:focusableInTouchMode="false"
            android:hint="@string/main_date"
            android:inputType="date" />

        <EditText
            android:id="@+id/editTextHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:focusableInTouchMode="false"
            android:hint="@string/main_hour"
            android:inputType="time" />

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_search" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="7"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textViewId"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="-1dp"
            android:layout_marginEnd="-1dp"
            android:layout_weight="1"
            android:background="@drawable/border_gray_bg_null"
            android:gravity="center|center_vertical"
            android:text="Id"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewPlate"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="-1dp"
            android:layout_marginEnd="-1dp"
            android:layout_weight="2"
            android:background="@drawable/border_gray_bg_null"
            android:gravity="center|center_vertical"
            android:text="@string/main_plate"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewDate"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="-1dp"
            android:layout_marginEnd="-1dp"
            android:layout_weight="2"
            android:background="@drawable/border_gray_bg_null"
            android:gravity="center|center_vertical"
            android:text="@string/main_date"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewHour"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="-1dp"
            android:layout_marginEnd="-1dp"
            android:layout_weight="2"
            android:background="@drawable/border_gray_bg_null"
            android:gravity="center|center_vertical"
            android:text="@string/main_hour"
            android:textSize="14sp" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

    </android.support.v7.widget.RecyclerView>


</android.support.constraint.ConstraintLayout>